# MyCAD

./: .gitignore  README.md  manage.py  requirements.txt
MyCAD/: asgi.py  deploy.py  settings.py  urls.py  wsgi.py
core/: CMakeLists.txt  api.cpp  funcs.cpp  wrapper.py
core/headers/: api.h  funcs.h
core/src/: CMakeLists.txt  api.cpp  base.cpp  core_api.cpp  document.cpp  line.cpp  main.cpp  point.cpp  session.cpp  utils.cpp
core/src/headers/: api.h  base.h  core_api.h  definitions.h  document.h  line.h  point.h  session.h  utils.h
data/: data.json  document.json
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py
static/: script.js  style.css
static/main/scripts/: connection_manager.js  connector.js  editor.js  editor_manager.js  interface.js  main.js  script.js  session_manager.js  storage.js  test_api.js  ui_manager.js
static/main/scripts/controller/: application_controller.js  connector.js  controller.js  operation.js  operation_controller.js  operations.js  test_api.js
static/main/scripts/view/: editor.js  interface.js  main.js  storage.js
static/main/styles/: style.css
templates/: index.html
